--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 
             </div>
             <div class="profile">
-                <img src="/Imagens-e-Icones/Foto Íntro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="/Imagens-e-Ícones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
