--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio - Gabriel R Maciel</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="Icone" href="/Imagens e Icones/5.png">
+    <link rel="icon" type="Icone" href="/Imagens-e-Icones/5.png">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 
             </div>
             <div class="profile">
-                <img src="/Imagens-e-Ícones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="/Imagens-e-Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
