--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio - Gabriel R Maciel</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="Icone" href="/Imagens-e-Icones/5.png">
+    <link rel="icon" type="Icone" href="/Imagens e Icones/5.png">
 </head>
 
 <body>
@@ -15,8 +15,7 @@
     <header>
         <nav>
             <ul>
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a class="active" href="/index.html">Home</a></li>
                 <li><a href="/Currículo/index.html">Currículo</a></li>
             </ul>
         </nav>
@@ -42,7 +41,7 @@
                 
             </div>
             <div class="profile">
-                <img src="/Imagens-e-Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="/Imagens e Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
