--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>Gabriel R Maciel</h1>
-        <p>Estudante de Engenharia | Desenvolvedor Web | Editor de Vídeos</p>
-        <a href="/index.html">
-            <img src="/Imagens e Icones/Home.png" alt="Logo Home" class="icon-home" style="transform: scale(0.9);">
-        </a>
-
+        <div>
+            <nav>
+                <ul>
+                    <li><a class="active" href="/index.html">Home</a></li>
+                    <li><a href="/Currículo/index.html">Currículo</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    
     <div>
+        <!-- Descrição -->
+        <section id="description" class="content-block">
+            <div>
+                <h1>Gabriel R Maciel</h1>
+                <p>Estudante de Engenharia | Desenvolvedor Web | Editor de Vídeos</p>
+            </div>  
+        </section>
+
         <!-- Sobre Mim -->
         <section id="about" class="content-block">
             <section class="organize">
@@ -37,7 +48,8 @@
                 construir conexões, ampliar pensamentos e dar vida a ideias inovadoras.
                 Acredito que a tecnologia é uma ferramenta poderosa para a inovação e a transformação. Seja
                 desenvolvendo software, explorando novas tendências em edição de vídeo, ou projetando algo
-                inimaginável</p>
+                inimaginável
+            </p>
         </section>
 
         <!-- Formação Acadêmica -->
