--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 
             </div>
             <div class="profile">
-                <img src="/Imagens-e-Icones/Foto_Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="/Imagens-e-Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
