--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a class="active" href="/index.html">Home</a></li>
-                <li><a href="/Currículo/index.html">Currículo</a></li>
+                <li><a href="./Currículo/index.html">Currículo</a></li>
             </ul>
         </nav>
     </header>
