--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a class="active" href="/index.html">Home</a></li>
-                <li><a href="./Currículo/index.html">Currículo</a></li>
+                <li><a href="currículo/index.html">Currículo</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,7 @@
                 
             </div>
             <div class="profile">
-                <img src="/Imagens-e-Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="Imagens-e-Icones/Foto Intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
