--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio - Gabriel R Maciel</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="Icone" href="/Imagens e Icones/5.png">
+    <link rel="icon" type="Icone" href="/imagens-e-icones/5.png">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                 
             </div>
             <div class="profile">
-                <img src="Imagens-e-Icones/foto-intro.png" alt="Gabriel" style="transform: scale(1.0);" />
+                <img src="imagens-e-icones/foto-intro.png" alt="Gabriel" style="transform: scale(1.0);" />
             </div>
         </section>
     </main>
