--- a/Currículo/index.html
+++ b/Currículo/index.html
@@ -35,7 +35,7 @@
         <section id="about" class="content-block">
             <section class="organize">
                 <div>
-                    <img src="/Imagens e Icones/Book.png" alt="ícone" style="transform: scale(0.8)">
+                    <img src="/Imagens e Icones/book.png" alt="ícone" style="transform: scale(0.8)">
                 </div>
                 <div>
                     <h2>Sobre Mim</h2>
@@ -56,7 +56,7 @@
         <section id="formations" class="content-block">
             <section class="organize">
                 <div>
-                    <img src="/Imagens e Icones/Capelo.png" alt="ícone" style="transform: scale(0.8)">
+                    <img src="/Imagens e Icones/capelo.png" alt="ícone" style="transform: scale(0.8)">
                 </div>
                 <div>
                     <h2>Formação Acadêmica</h2>
@@ -80,7 +80,7 @@
         <section id="languages" class="content-block">
             <section class="organize">
                 <div>
-                    <img src="/Imagens e Icones/Language.png" alt="ícone" style="transform: scale(0.8)">
+                    <img src="/Imagens e Icones/language.png" alt="ícone" style="transform: scale(0.8)">
                 </div>
                 <div>
                     <h2>Idiomas</h2>
@@ -99,7 +99,7 @@
         <section id="techs" class="content-block">
             <section class="organize">
                 <div>
-                    <img src="/Imagens e Icones/Chip.png" alt="ícone" style="transform: scale(0.8)">
+                    <img src="/Imagens e Icones/chip.png" alt="ícone" style="transform: scale(0.8)">
                 </div>
                 <div>
                     <h2>Informática</h2>
@@ -140,7 +140,7 @@
     <section id="contact" class="content-block">
         <section class="organize">
             <div>
-                <img src="/Imagens e Icones/Contact.png" alt="ícone" style="transform: scale(0.7)">
+                <img src="/Imagens e Icones/contact.png" alt="ícone" style="transform: scale(0.7)">
             </div>
             <div>
                 <h2>Contato</h2>
