--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
                 <section class="organize">
                     <div class="organize-align">
-                        <a class="btn" href="https://www.linkedin.com/in/gabriel-m-617714254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
+                        <a class="btn" href="https://www.linkedin.com/in/eugabrielrm" target="_blank">LinkedIn</a>
                     </div>
                     <div class="organize-align">
                         <a class="btn" href="https://github.com/GabrielRMaciel" target="_blank">GitHub</a>
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
